E35/src/cool-store-compose/kube-artifacts/gateway/gateway-coolstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  labels:
    app: gateway
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: gateway
    app.openshift.io/runtime: dotnet
  name: gateway
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.openshift.io/runtime: dotnet
      deployment: gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        app.openshift.io/runtime: dotnet
        deployment: gateway
    spec:
      containers:
      - env:
        - name: COMPONENT_CATALOG_HOST
          value: catalog-coolstore
        - name: COMPONENT_CATALOG_PORT
          value: "8080"
        - name: COMPONENT_INVENTORY_HOST
          value: inventory-coolstore
        - name: COMPONENT_INVENTORY_PORT
          value: "8080"
        image: quay.io/jchraibi/gateway-coolstore:latest
        imagePullPolicy: IfNotPresent
        name: gateway
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
