E35/src/cool-store-compose/kube-artifacts/gateway/gateway-coolstore-service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.kubernetes.io/component-source-type: local
      app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"inventory-coolstore"}]'
    labels:
      app: gateway
      app.kubernetes.io/instance: gateway
      app.kubernetes.io/managed-by: odo
      app.kubernetes.io/managed-by-version: v2.0.4
      app.kubernetes.io/name: dotnet
      app.kubernetes.io/part-of: coolstore
      app.openshift.io/runtime-version: latest
    name: gateway-coolstore
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    sessionAffinity: None
    type: ClusterIP
    selector:
      deployment: gateway
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
