E35/src/cool-store-compose/kube-artifacts/gateway/gateway-coolstore-route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"inventory-coolstore"}]'
      openshift.io/host.generated: "true"
    labels:
      app: coolstore
      app.kubernetes.io/instance: gateway
      app.kubernetes.io/managed-by: odo
      app.kubernetes.io/managed-by-version: v2.0.4
      app.kubernetes.io/part-of: coolstore
      odo.openshift.io/url-name: gateway
    name: gateway-coolstore
  spec:
    path: /
    port:
      targetPort: 8080
    to:
      kind: Service
      name: gateway-coolstore
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - status: "True"
        type: Admitted
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
